terraform/security_groups.tf
resource "aws_security_group" "devops-public-sg" {
  name        = "devops-public-sg"
  description = "Allow HTTP&SSH"
  vpc_id      = aws_vpc.devops-vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.devops-vpc.cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

    tags = {
    Name = "devops-public-sg"
    }
}

resource "aws_security_group" "devops-private-sg" {
  name        = "devops-private-sg"
  description = "Allow SSH VPC"
  vpc_id      = aws_vpc.devops-vpc.id

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    cidr_blocks = [aws_vpc.devops-vpc.cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

    tags = {
    Name = "devops-private-sg"
    }
}
